test/libsolidity/syntaxTests/parsing/fixed_literal_with_double_radix.sol
contract A {
	fixed40x40 pi = 3.14.15;
}
// ----
// ParserError: (34-37): Expected ';' but got 'Number'
